[uk] fix compilation error